--- a/app/partials/itinerary-route-edit.html
+++ b/app/partials/itinerary-route-edit.html
@@ -14,18 +14,51 @@
       <p>Route not found or has no points</p>
     </div>
     <div ng-show="data.points.length > 0">
-      <form name="search" class="css-form" novalidate>
+      <form name="attributesForm" class="css-form" novalidate>
         <div>
-          <p><span class="view-label">Name:</span> {{route.name === '' ? 'ID: ' + route.id : route.name}}</p>
+          <p>
+            <div ng-show="!state.edit">
+              <span class="view-label">Name:</span><span id='route-name' style="padding-left: 1em; padding-right: 1em;">{{route.name === '' ? 'ID: ' + route.id : route.name}}</span>
+              <span id="btn-edit-attributes" ng-click="startEditAttributes()" ng-show="!shared">
+                <svg class="bi bi-pencil-square" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                  <path d="M15.502 1.94a.5.5 0 0 1 0 .706L14.459 3.69l-2-2L13.502.646a.5.5 0 0 1 .707 0l1.293 1.293zm-1.75 2.456l-2-2L4.939 9.21a.5.5 0 0 0-.121.196l-.805 2.414a.25.25 0 0 0 .316.316l2.414-.805a.5.5 0 0 0 .196-.12l6.813-6.814z"/>
+                  <path fill-rule="evenodd" d="M1 13.5A1.5 1.5 0 0 0 2.5 15h11a1.5 1.5 0 0 0 1.5-1.5v-6a.5.5 0 0 0-1 0v6a.5.5 0 0 1-.5.5h-11a.5.5 0 0 1-.5-.5v-11a.5.5 0 0 1 .5-.5H9a.5.5 0 0 0 0-1H2.5A1.5 1.5 0 0 0 1 2.5v11z"/>
+                </svg>
+              </span>
+            </div>
+            <div ng-show="state.edit && !shared">
+              <label for="input-name">Name:</label>
+              <input id="input-name" ng-model="route.name" name="name" type="text" size="30" />
+              <span id='btn-save-attributes' ng-click="saveAttributes(attributesForm)">
+                <svg class="bi bi-check-square" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                  <path fill-rule="evenodd" d="M14 1H2a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1zM2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H2z"/>
+                  <path fill-rule="evenodd" d="M10.97 4.97a.75.75 0 0 1 1.071 1.05l-3.992 4.99a.75.75 0 0 1-1.08.02L4.324 8.384a.75.75 0 1 1 1.06-1.06l2.094 2.093 3.473-4.425a.236.236 0 0 1 .02-.022z"/>
+                </svg>
+              </span>
+            </div>
+          </p>
+          <p>
+            <div ng-show="!state.edit">
+              <span class="view-label">Colour:</span><span id="route-color" style="padding-left: 1em; padding-right: 1em;">{{route.color}}</span>
+            </div>
+            <div ng-show="state.edit">
+              <label for="input-color" style="padding-right: 10px;">Colour:</label>
+              <select id="input-color" ng-model="route.color">
+                <option value="">-- not set --</option>
+                <option ng-repeat="color in colors" value="{{color.key}}">{{color.value}}</option>
+              </select>
+            </div>
+          </p>
           <p>
             <span ng-show="route.distance">{{route.distance | number:2}} km</span>
             <span ng-show="route.distance">{{route.distance / 1.609344 | number:2}} mi</span>
-
             <span ng-show="route.highest" style="padding-left: 20px;">↗︎{{route.ascent | number:0}}&nbsp;m ↘︎{{route.descent | number:0}}&nbsp;m</span>
             <span ng-show="route.highest">↗︎{{route.ascent / 0.0254 / 12 | number:0}}&nbsp;ft ↘︎{{route.descent / 0.0254 / 12 | number:0}}&nbsp;ft</span>
             <span ng-show="route.highest" style="padding-left: 20px;">{{route.highest | number:0}}⇅{{route.lowest | number:0}}&nbsp;m</span>
             <span ng-show="route.highest">{{route.highest / 0.0254 / 12 | number:0}}&#x21c5;{{route.lowest / 0.0254 / 12 | number:0}}&nbsp;ft</span>
           </p>
+      </form>
+      <form name="form" class="css-form" novalidate>
           <table id="table-points" class="wide-table table table-striped">
             <tr>
               <th>
@@ -88,11 +121,35 @@
                   message="Split route before selected point"
                   on-confirm="split(form)"
                   >Split route</button>
+          <button id="btn-reverse"
+                  ng-click="reversePath()"
+                  class="btn btn-lg btn-warning"
+                  type="button"
+                  >Reverse</button>
         </div>
       </form>
     </div>
     <div>
-      <button id="btn-close" ng-click="cancel(form)" type="button" class="btn btn-lg btn-danger">Close</button>
+      <button id="btn-close"
+              class="btn btn-lg btn-danger"
+              ng-click="cancel(form)"
+              ng-show="!state.edit"
+              type="button"
+              >
+        Close
+      </button>
+      <button id="btn-cancel"
+              class="btn btn-lg btn-danger"
+              mwl-confirm
+              title="Confirm"
+              message="Cancel edit?"
+              on-confirm="cancel(form)"
+              ng-show="state.edit"
+              focus-button="confirm"
+              type="button"
+              >
+        Cancel
+      </button>
     </div>
   </div>
   <leaflet ng-if="status.showMap" controls="map.controls" markers="map.markers" paths="map.paths" bounds="map.bounds" lf-center="map.center" layers="map.layers" defaults="map.defaults" height="{{map.height}}"></leaflet>
