Minor updates to itinerary map behaviour
- Upgrade version of lodash package
- Bug fix - Itinerary waypoints not updated after pasting notes
- When pasting notes from track/location history, list now refreshed
- Recalculate bounds for itinerary map when settings applied
- Allow user to decide when popups are displayed on markers

--- a/app/partials/itinerary-map.html
+++ b/app/partials/itinerary-map.html
@@ -51,6 +51,10 @@
         <label for="auto-update">Auto-centre on live update:</label>
         <input id="auto-update" type="checkbox" ng-model="state.autocenter" />
       </div>
+      <div>
+        <label for="show-popup">Display popup on most recent marker:</label>
+        <input id="show-popup" type="checkbox" ng-model="state.popup" ng-change="updateLiveMapSettings()" />
+      </div>
       <div id="div-nicknames">
         <div style="padding-left: 15px;">
           <input id="input-my-nickname" type="checkbox" ng-change="selectNickname(data.myNickname)" ng-model="data.selfSelected"/>
