--- a/app/partials/itinerary-track-join.html
+++ b/app/partials/itinerary-track-join.html
@@ -17,7 +17,7 @@
             <button type="button" class="btn btn-info" ng-click="up(track.id)">Up</button>
             <button type="button" class="btn btn-info" ng-click="down(track.id)">Down</button>
           </td>
-          <td>{{track.name}}<span ng-show="!track.name">ID: {{track.id}}</span></td>
+          <td><span>{{track.name}}</span><span ng-show="!track.name">ID: {{track.id}}</span></td>
           <td>{{track.color}}</td>
           <td style="text-align: right;"><span ng-show="track.distance">{{track.distance | number:2}} km</span></td>
           <td style="text-align: right;"><span ng-show="track.distance">{{track.distance / 1.609344 | number:2}} mi</span></td>
