--- a/app/partials/gpx-upload.html
+++ b/app/partials/gpx-upload.html
@@ -17,7 +17,7 @@
       <div>
         <p>Select the GPX file to be uploaded using the browse button, then
           click the upload button.</p>
-        <input id="btn-file-upload" style="margin-bottom: 15px;" gpx-upload type="file" name="file" class="btn btn-lg btn-primary" />
+        <input id="btn-file-upload" style="margin-bottom: 15px;" file-upload type="file" name="file" class="btn btn-lg btn-primary" />
       </div>
       <div>
         <button id="btn-upload" ng-click="upload()" class="btn btn-lg btn-success">Upload</button>
