Fix pasting waypoints so that they are created in a consistent order

--- a/app/partials/itinerary.html
+++ b/app/partials/itinerary.html
@@ -61,7 +61,7 @@
                 <li id="btn-join-path" role="menuitem"><a href="#" ng-click="joinPaths(downloads)" ng-show="data.shared_to_nickname === null">Join paths</a></li>
                 <li class="divider"></li>
                 <li role="menuitem"><a href="#" ng-click="copyItemsForPaste(downloads)">Copy</a></li>
-                <li role="menuitem">
+                <li id="btn-paste" role="menuitem">
                   <a href="#"
                      mwl-confirm
                      title="Paste"
